adding package.json

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "eslint-plugin-react": "^7.20.5",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
     "sass-loader": "^9.0.2",
+    "scss-loader": "0.0.1",
     "style-loader": "^1.2.1",
     "typescript": "^3.9.7",
     "webpack-dev-server": "^3.11.0",
