--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
     "start": "webpack-dev-server --env.ENVIRONMENT=development --config ./webpack/webpack.development.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +18,10 @@
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.0",
+    "eslint": "^7.6.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.5",
