--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
     "start": "webpack-dev-server --env.ENVIRONMENT=development --config ./webpack/webpack.development.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config=./tests/jest.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/enzyme": "^3.10.5",
+    "@types/jest": "^26.0.9",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
@@ -18,6 +20,9 @@
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.5.0",
     "eslint": "^7.6.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
     "eslint-config-prettier": "^6.11.0",
@@ -27,11 +32,13 @@
     "eslint-plugin-react": "^7.20.5",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "jest": "^26.2.2",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
     "sass-loader": "^9.0.2",
     "scss-loader": "0.0.1",
     "style-loader": "^1.2.1",
+    "ts-jest": "^26.1.4",
     "typescript": "^3.9.7",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.0.9"
