adding env variables

--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "webpack-merge": "^5.0.9"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "prop-types": "^15.7.2"
+    "react-dom": "^16.13.1"
   }
 }
