--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.3",
+    "@testing-library/react-hooks": "^3.4.1",
     "@types/enzyme": "^3.10.5",
     "@types/jest": "^26.0.9",
     "@types/lodash": "^4.14.159",
