--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,7 +47,9 @@
       "@styles/*": ["src/public/styles"],
       "@components/*": ["src/app/components/*"],
       "@assets/*": ["src/public/assets/*"],
-      "@services/*": ["src/app/services/*"]
+      "@services/*": ["src/app/services/*"],
+      "@hooks/*": ["src/app/hooks/*"],
+      "@typings/*": ["src/typings/*"]
     },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
