--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 POKEMON_API=https://pokeapi.co/api/v2/pokemon
 POKEMON_IMAGES_URL=https://pokeres.bastionbot.org/images/pokemon
+BREAKING_BAD_API=https://www.breakingbadapi.com/api/
 USE_LOCAL_STORAGE=false
