--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.2.2",
+    "jest-fetch-mock": "^3.0.3",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
     "sass-loader": "^9.0.2",
