changing the assets folder and turning off some lint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -37,6 +37,7 @@
     "prettier/prettier": "error",
     "@typescript-eslint/interface-name-prefix": "off",
     "react/jsx-one-expression-prer-line": "off",
+    "react/jsx-props-no-spreading": "off",
     "react/jsx-filename-extension": [
       1,
       { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
