--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/enzyme": "^3.10.5",
     "@types/jest": "^26.0.9",
     "@types/lodash": "^4.14.159",
+    "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
@@ -53,6 +54,7 @@
     "dotenv": "^8.2.0",
     "lodash": "^4.17.19",
     "prop-types": "^15.7.2",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0"
