--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^10.4.9",
     "@testing-library/react-hooks": "^3.4.1",
     "@types/enzyme": "^3.10.5",
+    "@types/history": "^4.7.7",
     "@types/jest": "^26.0.9",
     "@types/lodash": "^4.14.159",
     "@types/query-string": "^6.3.0",
@@ -52,6 +53,7 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "history": "^4.9.0",
     "lodash": "^4.17.19",
     "prop-types": "^15.7.2",
     "query-string": "^6.13.1",
