--- a/webpack/.eslintrc
+++ b/webpack/.eslintrc
@@ -1,41 +1,35 @@
 {
-    "root": true,
-    "parserOptions": {
-        "ecmaVersion": 2018
-    },
-    "env": {
-        "node": true
-    },
-    "plugins": [
-        "prettier", "import"
+  "root": true,
+  "parserOptions": {
+    "ecmaVersion": 2018
+  },
+  "env": {
+    "node": true
+  },
+  "plugins": ["prettier", "import"],
+  "extends": ["eslint:recommended", "plugin:prettier/recommended"],
+  "rules": {
+    "import/extensions": [
+      // Severity
+      "error",
+      // Enforces the use of extensions for all imports
+      // except packages imports
+      "ignorePackages",
+      {
+        "js": "never"
+      }
     ],
-    "extends": [
-        "eslint:recommended",
-        "plugin:prettier/recommended"
-    ],
-    "rules": {
-        "import/extensions": [
-            // Severity
-            "error",
-            // Enforces the use of extensions for all imports
-            // except packages imports
-            "ignorePackages",
-            {
-                "js": "never"
-            }
-        ],
-        "prettier/prettier": "error", 
-        "import/prefer-default-export": "off",
-        "@typescript-eslint/no-var-requires": "off"
-    },
-    "settings": {
-        "import/resolver": {
-            "node": {
-                // List of extensions that will parsed
-                // modules and inspected for exports
-                "extensions": [".js"]
-            }
-        }
+    "prettier/prettier": "error",
+    "import/prefer-default-export": "off",
+    "@typescript-eslint/no-var-requires": "off"
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        // List of extensions that will parsed
+        // modules and inspected for exports
+        "extensions": [".js"]
+      }
     }
+  }
 }
-  
