--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
     "start": "webpack-dev-server --env.ENVIRONMENT=development --config ./webpack/webpack.development.config.js",
-    "test": "jest --config=./tests/jest.config.js"
+    "test": "jest --config=./tests/jest.config.js",
+    "prettier": "prettier --config ./.prettierrc --write ."
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +21,10 @@
     "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
+    "@types/redux": "^3.6.0",
+    "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.5",
+    "@types/redux-thunk": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "awesome-typescript-loader": "^5.2.1",
@@ -57,6 +61,10 @@
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "thunk": "0.0.1"
   }
 }
