--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-POKEMON_API=https://pokeapi.co/api/v2/pokemon
+POKEMON_API=https://pokeapi.co/api/v2
 POKEMON_IMAGES_URL=https://pokeres.bastionbot.org/images/pokemon
 USE_LOCAL_STORAGE=false
