--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx",
     "start": "webpack-dev-server --env.ENVIRONMENT=development --config ./webpack/webpack.development.config.js",
+    "build": "webpack --env.ENVIRONMENT=production --config ./webpack/webpack.production.config.js",
     "test": "jest --config=./tests/jest.config.js",
     "prettier": "prettier --config ./.prettierrc --write ."
   },
@@ -21,6 +22,7 @@
     "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
@@ -28,7 +30,6 @@
     "@typescript-eslint/parser": "^3.7.1",
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.5.0",
@@ -43,19 +44,16 @@
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.2.2",
     "jest-fetch-mock": "^3.0.3",
-    "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
-    "sass-loader": "^9.0.2",
-    "scss-loader": "0.0.1",
-    "style-loader": "^1.2.1",
     "ts-jest": "^26.1.4",
-    "typescript": "^3.9.7",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.0.9"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "css-loader": "^4.2.0",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.19",
+    "mini-css-extract-plugin": "^1.3.3",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
@@ -64,6 +62,11 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "thunk": "0.0.1"
+    "sass-loader": "^9.0.2",
+    "style-loader": "^1.2.1",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-merge": "^5.0.9"
   }
 }
